--- a/Figures.vcxproj
+++ b/Figures.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Figures.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Figure.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
