Реализовал метод перемещения фигуры

--- a/Figures.vcxproj
+++ b/Figures.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Figure.cpp" />
     <ClCompile Include="Figures.cpp" />
   </ItemGroup>
   <ItemGroup>
